zellij-server/src/unit/snapshots/zellij_server__screen__screen_tests__send_cli_new_pane_in_place_with_close_replaced_pane.snap
---
source: zellij-server/src/./unit/screen_tests.rs
expression: "format!(\"{:#?}\", spawn_in_place_instruction)"
---
Some(
    SpawnInPlaceTerminal(
        Some(
            RunCommand(
                RunCommand {
                    command: "bash",
                    args: [],
                    cwd: Some(
                        ".",
                    ),
                    hold_on_close: true,
                    hold_on_start: false,
                    originating_plugin: None,
                    use_terminal_title: false,
                    resurrected: false,
                },
            ),
        ),
        None,
        true,
        ClientId(
            10,
        ),
        Some(
            NotificationEnd {
                channel: None,
                exit_status: None,
                unblock_condition: None,
                affected_pane_id: None,
                affected_tab_id: None,
                error_message: None,
                stdout_lines: [],
            },
        ),
    ),
)
